fixed the second problem

--- a/final_project_pneunomia_ex.ipynb
+++ b/final_project_pneunomia_ex.ipynb
@@ -2443,7 +2443,12 @@
    "source": [
     "model_weights =[] \n",
     "conv_layers = [] \n",
-    "model_children = list(model.model.children()) # double model because of inner model\n",
+    "\n",
+    "# model_children = list(model.children()) # doesn't work because of inner model\n",
+    "\n",
+    "# 2x model because of inner model!\n",
+    "model_children = list(model.model.children())\n",
+    "\n",
     "counter = 0 \n",
     "for i in range(len(model_children)): \n",
     "    if type(model_children[i]) == nn.Conv2d: \n",
@@ -2524,7 +2529,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate CAMs for a trained CNN"
+    "### Generate CAMs for a trained CNN\n",
+    "According to: https://www.kaggle.com/code/antwerp/where-is-the-model-looking-for-gradcam-pytorch/notebook"
    ]
   },
   {
@@ -2560,7 +2566,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_layers = conv_layers"
+    "for parameter in model.model.parameters():\n",
+    "      # Set true\n",
+    "  parameter.requires_grad = True\n",
+    "\n",
+    "# Set model in eval mode\n",
+    "model.eval()"
    ]
   },
   {
@@ -2569,46 +2580,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO doesn't work as expected\n",
-    "# link: https://www.kaggle.com/code/antwerp/where-is-the-model-looking-for-gradcam-pytorch/notebook\n",
-    "\n",
-    "# Drive\n",
-    "# path = \"/content/chest_xray_db/test/healthy/IM-0115-0001.jpeg\"\n",
-    "\n",
-    "# Local\n",
-    "path = \"IM-0115-0001.jpeg\"\n",
-    "rgb_img = Image.open(path).convert('RGB')\n",
-    "print(type(rgb_img))\n",
-    "\n",
-    "# Max min normalization\n",
-    "rgb_img = (rgb_img - np.min(rgb_img)) / (np.max(rgb_img) - np.min(rgb_img))\n",
-    "print(type(rgb_img))\n",
-    "# Create an input tensor image for your model\n",
-    "# input_tensor\n",
-    "\n",
-    "input_tensor = torchvision.transforms.functional.to_tensor(rgb_img)\n",
-    "\n",
-    "\n",
-    "# Construct the CAM object once, and then re-use it on many images:\n",
-    "# target_leyers = List[torch.nn.Module]\n",
-    "cam = GradCAM(model=model, target_layers=target_layers, use_cuda=False)\n",
-    "\n",
-    "\n",
-    "# We have to specify the target we want to generate\n",
-    "# the Class Activation Maps for.\n",
-    "# If targets is None, the highest scoring category\n",
-    "# will be used for every image in the batch.\n",
-    "# Here we use ClassifierOutputTarget, but you can define your own custom targets\n",
-    "# That are, for example, combinations of categories, or specific outputs in a non standard model.\n",
-    "# targets = [e.g ClassifierOutputTarget(281)]\n",
-    "# target_category = None\n",
-    "\n",
-    "# You can also pass aug_smooth=True and eigen_smooth=True, to apply smoothing.\n",
-    "grayscale_cam = cam(input_tensor=input_tensor)\n",
-    "\n",
-    "# In this example grayscale_cam has only one image in the batch:\n",
-    "grayscale_cam = grayscale_cam[0, :]\n",
-    "visualization = show_cam_on_image(rgb_img, grayscale_cam, use_rgb=True)\n"
+    "input_tensor = f_image.unsqueeze(0)\n",
+    "c_img = transforms.ToPILImage()(f_image.cpu())\n",
+    "c_img = (c_img - np.min(c_img)) / (np.max(c_img) - np.min(c_img))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with GradCAM(model=model.model, target_layers=[model.model.layer4[-1]], use_cuda=use_gpu) as cam:\n",
+    "  grayscale_c = cam(input_tensor=input_tensor)\n",
+    "  grayscale_cam = grayscale_c[0, :]\n",
+    "  cam_image = show_cam_on_image(c_img, grayscale_cam)\n",
+    "PIL.Image.fromarray(cam_image)"
    ]
   }
  ],
